<resources>
    <string name="app_name">CrudSQLite</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- List Row -->
    <string name="name">Name</string>
    <string name="address">address</string>

    <!-- Activity edit -->
    <string name="input_address">Input Address...</string>
    <string name="input_name">Input Name...</string>
    <string name="input_id">Input Id...</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>
